<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="214dp"
        android:text="LOGIN"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="371dp" />

    <EditText
        android:id="@+id/userid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="140dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="250dp"
        android:layout_marginRight="140dp"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="161dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="303dp" />

    <TextView
        android:id="@+id/textviewsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="273dp"
        android:text="@string/new_user_sign_up_here" />

</RelativeLayout>